--- a/public/index.html
+++ b/public/index.html
@@ -2703,6 +2703,9 @@
             window.location.href = '/login';
         }
     }
+
+    // Проверяем что все функции правильно определены
+    console.log('✅ JavaScript загружен успешно');
 </script>
 </body>
 </html>
