--- a/public/index.html
+++ b/public/index.html
@@ -490,7 +490,7 @@
         /* Расширенная пагинация */
         .pagination-section {
             display: flex;
-            justify-content: between;
+            justify-content: space-between;
             align-items: center;
             margin-top: 20px;
             padding: 20px;
