--- a/public/index.html
+++ b/public/index.html
@@ -194,23 +194,55 @@
         visitors: {
             async load(page = 1) {
                 const params = new URLSearchParams({
-                    page,
-                    limit: app.state.pagination.visitors.size,
-                    search: document.getElementById('search-input').value,
-                    status: document.getElementById('status-filter').value,
-                    event_id: document.getElementById('event-filter').value
+                    page: page || 1,
+                    limit: app.state.pagination.visitors.size || 25,
+                    search: (document.getElementById('search-input')?.value || '').trim(),
+                    status: document.getElementById('status-filter')?.value || '',
+                    event_id: document.getElementById('event-filter')?.value || ''
                 });
 
+                // Удаляем пустые параметры
+                for (const [key, value] of [...params.entries()]) {
+                    if (!value || value === '' || value === 'undefined' || value === 'null') {
+                        params.delete(key);
+                    }
+                }
+
                 try {
+                    console.log('Загрузка посетителей с параметрами:', Object.fromEntries(params));
                     const res = await fetch(`/api/visitors?${params}`);
+
+                    if (!res.ok) {
+                        const errorData = await res.json().catch(() => ({ error: 'Неизвестная ошибка' }));
+                        throw new Error(errorData.error || `HTTP ${res.status}`);
+                    }
+
                     const data = await res.json();
 
-                    app.state.visitors = data.visitors;
-                    app.state.pagination.visitors = data.pagination;
+                    app.state.visitors = data.visitors || [];
+                    app.state.pagination.visitors = {
+                        page: data.pagination?.page || 1,
+                        size: data.pagination?.limit || 25,
+                        total: data.pagination?.total || 0,
+                        pages: data.pagination?.pages || 1
+                    };
 
                     this.render();
                 } catch (err) {
-                    app.showAlert('error', 'Ошибка загрузки посетителей');
+                    console.error('Ошибка загрузки посетителей:', err);
+                    app.showAlert('error', 'Ошибка загрузки посетителей: ' + err.message);
+
+                    // Показываем сообщение об ошибке в таблице
+                    const container = document.getElementById('visitors-table');
+                    if (container) {
+                        container.innerHTML = `
+                    <div class="empty" style="color: #dc3545;">
+                        <h3>❌ Ошибка загрузки</h3>
+                        <p>${err.message}</p>
+                        <button onclick="app.visitors.load()" style="margin-top: 10px;">🔄 Попробовать снова</button>
+                    </div>
+                `;
+                    }
                 }
             },
 
@@ -218,44 +250,50 @@
                 const container = document.getElementById('visitors-table');
                 const visitors = app.state.visitors;
 
+                if (!container) {
+                    console.error('Контейнер visitors-table не найден');
+                    return;
+                }
+
                 document.getElementById('visitors-count').textContent = visitors.length;
 
                 if (visitors.length === 0) {
                     container.innerHTML = '<div class="empty">Посетители не найдены</div>';
+                    document.getElementById('visitors-pagination')?.classList.add('hidden');
                     return;
                 }
 
                 container.innerHTML = `
-                <table>
-                    <thead>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ФИО</th>
+                        <th>Событие</th>
+                        <th>Статус</th>
+                        <th>Сканирований</th>
+                        <th>Действия</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    ${visitors.map(v => `
                         <tr>
-                            <th>ФИО</th>
-                            <th>Событие</th>
-                            <th>Статус</th>
-                            <th>Сканирований</th>
-                            <th>Действия</th>
+                            <td>
+                                <strong>${v.last_name} ${v.first_name} ${v.middle_name || ''}</strong>
+                                ${v.comment ? `<br><small>${v.comment}</small>` : ''}
+                            </td>
+                            <td><span class="badge">${v.event?.name || 'Без события'}</span></td>
+                            <td><span class="status-${v.status}">${v.status === 'active' ? 'Активен' : 'Заблокирован'}</span></td>
+                            <td>${v.total_scans} ${v.first_scan_today ? '(сегодня)' : ''}</td>
+                            <td>
+                                <button onclick="app.visitors.downloadQR(${v.id})" title="Скачать QR">📥</button>
+                                <button onclick="app.visitors.toggleStatus(${v.id}, '${v.status}')" title="${v.status === 'active' ? 'Заблокировать' : 'Разблокировать'}">${v.status === 'active' ? '🔒' : '🔓'}</button>
+                                ${app.state.currentUser.role === 'admin' ? `<button onclick="app.visitors.delete(${v.id})" title="Удалить">🗑️</button>` : ''}
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        ${visitors.map(v => `
-                            <tr>
-                                <td>
-                                    <strong>${v.last_name} ${v.first_name} ${v.middle_name || ''}</strong>
-                                    ${v.comment ? `<br><small>${v.comment}</small>` : ''}
-                                </td>
-                                <td><span class="badge">${v.event?.name || 'Без события'}</span></td>
-                                <td><span class="status-${v.status}">${v.status === 'active' ? 'Активен' : 'Заблокирован'}</span></td>
-                                <td>${v.total_scans} ${v.first_scan_today ? '(сегодня)' : ''}</td>
-                                <td>
-                                    <button onclick="app.visitors.downloadQR(${v.id})">📥</button>
-                                    <button onclick="app.visitors.toggleStatus(${v.id}, '${v.status}')">${v.status === 'active' ? '🔒' : '🔓'}</button>
-                                    ${app.state.currentUser.role === 'admin' ? `<button onclick="app.visitors.delete(${v.id})">🗑️</button>` : ''}
-                                </td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
-            `;
+                    `).join('')}
+                </tbody>
+            </table>
+        `;
 
                 app.renderPagination('visitors');
             },
